feat: hard-cut over semantic entity identifiers
